--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ parchment_minecraft_version=1.21.1
 parchment_mappings_version=2024.11.17
 
 mod_id=ftbpromoter
+curseforge_id=126
 
 minecraft_version=1.21.1
 minecraft_version_range=[1.21.1]
