--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,22 @@
-parchment_minecraft_version=1.20.4
-parchment_mappings_version=2024.04.14
+parchment_minecraft_version=1.20.1
+parchment_mappings_version=2023.09.03
 
 mod_id=ftbpromoter
 stability=beta
 curseforge_id=1194001
 
-minecraft_version=1.20.4
-minecraft_version_range=[1.20.4]
+minecraft_version=1.20.1
+minecraft_version_range=[1.20.1]
 
-loader=neoforge
-mod_loader_version=20.4.239
-mod_loader_version_range=[20.4.0,)
-loader_version_range=[1,)
+loader=forge
+mod_loader_version=47.1.47
+mod_loader_version_range=[47.1.0,)
+loader_version_range=[47,)
 
-ftb_library_version=2004.2.4
+ftb_library_version=2001.2.9
+ftb_library_architectury_version=9.0.8
 ftb_worlds_version=1.0.9
-bisecthosting_version=5762089
-fancy_menu_version=5823952
-fancy_menu_konkrete_version=5148096
-fancy_menu_melody_version=5145418
+bisecthosting_version=5761805
+fancy_menu_version=6231136
+fancy_menu_konkrete_version=5028413
+fancy_menu_melody_version=5109692
