feat: backport to 1.19

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,24 @@
-parchment_minecraft_version=1.20.1
-parchment_mappings_version=2023.09.03
+parchment_minecraft_version=1.19.2
+parchment_mappings_version=2022.11.27
 
-first_commit=b6d5a81c6565b8b7602bc0315d1181f11370946b
+first_commit=562081ef632202f6b0f2466a747d086bd2c89f64
 
 mod_id=ftbpromoter
 stability=beta
 curseforge_id=1194001
 
-minecraft_version=1.20.1
-minecraft_version_range=[1.20.1]
+minecraft_version=1.19.2
+minecraft_version_range=[1.19.2]
 
 loader=forge
-mod_loader_version=47.1.47
-mod_loader_version_range=[47.1.0,)
-loader_version_range=[47,)
+mod_loader_version=43.4.20
+mod_loader_version_range=[43.4.0,)
+loader_version_range=[43,)
 
-ftb_library_version=2001.2.9
-ftb_library_architectury_version=9.0.8
+ftb_library_version=1902.4.1-build.315
+ftb_library_architectury_version=6.6.92
 ftb_worlds_version=1.0.9
-bisecthosting_version=5761805
-fancy_menu_version=6231136
-fancy_menu_konkrete_version=5028413
-fancy_menu_melody_version=5109692
+bisecthosting_version=5877700
+fancy_menu_version=6231129
+fancy_menu_konkrete_version=5028409
+fancy_menu_melody_version=4983999
