--- a/build.gradle
+++ b/build.gradle
@@ -227,8 +227,7 @@ publishMods {
     dryRun = !cfToken.isPresent()
     changelog = createChangelog()
     file = jar.archiveFile
-    displayName = "[NEOFORGE] FTB Promoter ${project.version}"
-    modLoaders.add("neoforge")
+    displayName = "[FORGE] FTB Promoter ${project.version}"
     modLoaders.add("forge")
 
     type = stability == "alpha" ? ALPHA : (stability == "beta" ? BETA : STABLE)
