--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,25 @@
-parchment_minecraft_version=1.19.2
-parchment_mappings_version=2022.11.27
+parchment_minecraft_version=1.18.2
+parchment_mappings_version=2022.11.06
 
-first_commit=562081ef632202f6b0f2466a747d086bd2c89f64
+first_commit=b1654f6e26bc24d4d5980c21dc8a74367e3e0ae8
 
 mod_id=ftbpromoter
 stability=beta
 curseforge_id=1194001
 
-minecraft_version=1.19.2
-minecraft_version_range=[1.19.2]
+mod_version_base=18.2
+minecraft_version=1.18.2
+minecraft_version_range=[1.18.2]
 
 loader=forge
-mod_loader_version=43.4.20
-mod_loader_version_range=[43.4.0,)
-loader_version_range=[43,)
+mod_loader_version=40.3.6
+mod_loader_version_range=[40.3.0,)
+loader_version_range=[40,)
 
-ftb_library_version=1902.4.1-build.315
-ftb_library_architectury_version=6.6.92
+ftb_library_version=1802.3.11-build.177
+ftb_library_architectury_version=4.12.94
 ftb_worlds_version=1.0.9
-bisecthosting_version=5877700
-fancy_menu_version=6231129
-fancy_menu_konkrete_version=5028409
-fancy_menu_melody_version=4983999
+bisecthosting_version=5762047
+fancy_menu_version=6231110
+fancy_menu_konkrete_version=5028407
+fancy_menu_melody_version=4984009
