--- a/gradle.properties
+++ b/gradle.properties
@@ -1,25 +1,25 @@
-parchment_minecraft_version=1.18.2
-parchment_mappings_version=2022.11.06
+#parchment_minecraft_version=1.18.2
+#parchment_mappings_version=2022.11.06
 
-first_commit=b1654f6e26bc24d4d5980c21dc8a74367e3e0ae8
+first_commit=9f4e238022458e59323b5424af6d487b7e2a43a7
 
 mod_id=ftbpromoter
 stability=beta
 curseforge_id=1194001
 
-mod_version_base=18.2
-minecraft_version=1.18.2
-minecraft_version_range=[1.18.2]
+mod_version_base=16.5
+minecraft_version=1.16.5
+minecraft_version_range=[1.16.5]
 
 loader=forge
-mod_loader_version=40.3.6
-mod_loader_version_range=[40.3.0,)
-loader_version_range=[40,)
+mod_loader_version=36.2.42
+mod_loader_version_range=[36.2.0,)
+loader_version_range=[36,)
 
-ftb_library_version=1802.3.11-build.177
-ftb_library_architectury_version=4.12.94
-ftb_worlds_version=1.0.9
-bisecthosting_version=5762047
-fancy_menu_version=6231110
-fancy_menu_konkrete_version=5028407
-fancy_menu_melody_version=4984009
+#ftb_library_version=1605.3.4-build.90
+#ftb_library_architectury_version=4.12.94
+#ftb_worlds_version=1.0.9
+bisecthosting_version=5762045
+#fancy_menu_version=6231110
+#fancy_menu_konkrete_version=5028407
+#fancy_menu_melody_version=4984009
