fix: mixin loading causing crashes
comment: can't have mixin errors if you don't use mixins :wink:

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,7 @@
 public net.minecraft.client.gui.components.AbstractSelectionList$Entry
+public net.minecraft.client.renderer.texture.DownloadingTexture field_110559_g # uploaded
+public net.minecraft.client.renderer.texture.DownloadingTexture field_152434_e # file
+public net.minecraft.client.renderer.texture.DownloadingTexture field_229156_j_ # future
+public net.minecraft.client.renderer.texture.DownloadingTexture func_195417_a(Lnet/minecraft/client/renderer/texture/NativeImage;)V # loadCallback
+public net.minecraft.client.renderer.texture.DownloadingTexture field_110562_b # urlString
+public net.minecraft.client.renderer.texture.DownloadingTexture func_229159_a_(Ljava/io/InputStream;)Lnet/minecraft/client/renderer/texture/NativeImage; # load
