--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,10 @@ loader=neoforge
 mod_loader_version=21.1.115
 mod_loader_version_range=[21.1.97,)
 loader_version_range=[1,)
+
+ftb_library_version=2101.1.8
+ftb_worlds_version=1.0.9
+bisecthosting_version=5762091
+fancy_menu_version=5823966
+fancy_menu_konkrete_version=5453385
+fancy_menu_melody_version=5453382
