--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ parchment_minecraft_version=1.21.1
 parchment_mappings_version=2024.11.17
 
 mod_id=ftbpromoter
-stability=beta
+stability=release
 curseforge_id=1194001
 
 minecraft_version=1.21.1
