--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ parchment_minecraft_version=1.21.1
 parchment_mappings_version=2024.11.17
 
 mod_id=ftbpromoter
+mod_version=21.1.59
 stability=release
 curseforge_id=1194001
 
