--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ parchment_mappings_version=2023.09.03
 first_commit=b6d5a81c6565b8b7602bc0315d1181f11370946b
 
 mod_id=ftbpromoter
+mod_version=20.1.58
 stability=release
 curseforge_id=1194001
 
