--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,8 @@ parchment_minecraft_version=1.20.4
 parchment_mappings_version=2024.04.14
 
 mod_id=ftbpromoter
-stability=beta
+mod_version=20.4.54
+stability=release
 curseforge_id=1194001
 
 minecraft_version=1.20.4
